added support for "proxied"
check https://api.cloudflare.com/#dns-records-for-a-zone-update-dns-record for more information

--- a/cf-ddns.conf
+++ b/cf-ddns.conf
@@ -6,7 +6,8 @@
      "id": "", 
      "ipv4": "", 
      "ipv6": "", 
-     "name": "HOST_NAME_HERE e.g. www", 
+     "name": "HOST_NAME_HERE e.g. www",
+     "proxied": "yes or no",
      "types": ["A"]
     }
    ], 
